base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default        # 실제 네임스페이스로 변경
  labels:
    app: backend
spec:
  replicas: 2              # 원하는 복제 수
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 061039804626.dkr.ecr.ap-northeast-2.amazonaws.com/matchfit-test-ecr:latest
          ports:
            - containerPort: 8080
